--- a/style.css
+++ b/style.css
@@ -32,3 +32,27 @@ body {
   pointer-events: none;
   opacity: 0.6;
 }
+#seats {
+  width: 600px;
+  height: 300px;
+  position: relative;
+  background-image: url("background.jpg");
+  background-size: cover;
+  float: left;
+}
+
+#bookedList {
+  float: left;
+  margin-left: 40px;
+}
+
+#bookedList ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+#bookedList li {
+  margin: 5px 0;
+  font-family: sans-serif;
+  font-size: 14px;
+}
